Task 3. Local run.

--- a/src/app/features/article-detail/article-detail.component.html
+++ b/src/app/features/article-detail/article-detail.component.html
@@ -1,7 +1,8 @@
 <app-menu></app-menu>
 <app-header></app-header>
 <app-article-info 
-    [article]="article" 
+    [article]="article"
+    [isLoading]="isLoading" 
     (onEdit)="onEdit($event)" 
     (onDelete)="onDelete($event)"></app-article-info>
 <app-footer></app-footer>
