--- a/src/app/features/article-form/article-form.component.html
+++ b/src/app/features/article-form/article-form.component.html
@@ -1,4 +1,8 @@
 <app-menu></app-menu>
 <app-header [title]="title"></app-header>
-<app-form [article]="article" (onCancel)="onCancel()"></app-form>
+<app-form 
+    [article]="article" 
+    [isLoaded]="isLoaded" 
+    (onCancel)="onCancel()"
+    (onSubmit)="onSubmit($event)"></app-form>
 <app-footer></app-footer>
