--- a/src/app/features/articles-list/options/options.component.html
+++ b/src/app/features/articles-list/options/options.component.html
@@ -1,10 +1,10 @@
 <div class="app-options mb-3">
     <div class="row">
         <div class="form-group form-inline option-control">
-            <select class="form-control" id="sourceSelect" (change)="sourceChange($event)" [disabled]="isChecked">
+            <select class="form-control" id="sourceSelect" [(ngModel)]="selectedSources" (change)="sourceChange($event)" [disabled]="isChecked">
                 <option *ngFor="let source of sources;"
-                    [value]="source">
-                        {{source}}
+                    [value]="source.id">
+                        {{source.name}}
                 </option>
             </select>
         </div>
@@ -14,8 +14,8 @@
                 class="form-control option"
                 id="filterInput"
                 placeholder="type your filter..."
-                (change)="filterChange($event)">
-            <button type="button" class="btn btn-outline-dark" (click) = "filterClick()">Filter</button>
+                #filterInput>
+            <button type="button" class="btn btn-outline-dark" (click) = "filterClick(filterInput.value)">Filter</button>
         </div>
         <div class="form-group form-inline option-control">
             <input 
