Task 3 part complete.

--- a/src/app/features/articles-list/article/article.component.html
+++ b/src/app/features/articles-list/article/article.component.html
@@ -1,4 +1,4 @@
-<div class="card card-list mt-3 mr-3">
+<div class="card card-list m-3">
     <div>
         <div class="card-container">
             <img class="card-img-top card-list" src={{article.urlToImage}} onError="this.src='assets/img/mock-img.png';" alt="image">
