--- a/src/app/features/articles-list/articles-list.component.html
+++ b/src/app/features/articles-list/articles-list.component.html
@@ -1,19 +1,20 @@
 <app-menu></app-menu>
 <app-header [title]="title"></app-header>
-<app-options
+<option-example-element
         (onSourceChange)="onSourceChange($event)"
         (onFilterClick)="onFilterClick($event)"
         (onCheckedByMe)="onCheckedByMe($event)"
         [selectedSources]="selectedSources"
         [inputFilter]="inputFilter"
         [sources]="sources">
-</app-options>
-<ul *ngFor="let article of articles | articleFilter: inputFilter;">
+</option-example-element>
+<div #articlesList></div>
+<!--<ul *ngFor="let article of articles | articleFilter: inputFilter;">
         <app-article 
                 [article]="article"
                 (onDelete)="onDelete($event)">
         </app-article>
-</ul>
+</ul>-->
 <app-load-more (onLoadMore)="onLoadMore()"></app-load-more>
 <app-footer></app-footer>
 
