--- a/src/app/features/articles-list/article/article.component.html
+++ b/src/app/features/articles-list/article/article.component.html
@@ -1,7 +1,7 @@
 <div class="card card-list m-3">
     <div>
         <div class="card-container">
-            <img class="card-img-top card-list" src={{article.urlToImage}} onError="this.src='assets/img/mock-img.png';" alt="image">
+            <img class="card-img-top card-list" src={{article.urlToImage}} onError="this.src='dist/assets/img/mock-img.png';" alt="image">
         </div>
         <div class="content-container">
             <h5 class="card-title">{{article.title}}</h5>
