Fix error with local img.

--- a/src/app/features/article-detail/article-info/article-info.component.html
+++ b/src/app/features/article-detail/article-info/article-info.component.html
@@ -4,7 +4,7 @@
     </div>
     <div *ngIf="isLoading">
         <div class="card-container">
-            <img class="card-img-top card-list" src={{article.urlToImage}} onError="this.src='dist/assets/img/mock-img.png';" alt="image">
+            <img class="card-img-top card-list" src={{article.urlToImage}} onError="this.src='FrontCamp2019AngularModulePart23.github.io/dist/assets/img/mock-img.png';" alt="image">
         </div>
         <div class="content-container">
             <h5 class="card-title">{{article.title}}</h5>
